--- a/.github/workflows/Build_OP_Nanopi_R4S.yml
+++ b/.github/workflows/Build_OP_Nanopi_R4S.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   OpenWrt-18_06:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
